<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acerca_de_titulo"
            android:textAlignment="center"
            android:textSize="@dimen/txts_titulo"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_cuerpo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acerca_de_texto"
            android:justificationMode="inter_word"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/txts_default" />

        <TextView
            android:id="@+id/text_aclaracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acerca_de_aclaracion"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/txts_default"
            android:justificationMode="inter_word"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>